<resources>
    <string name="app_name">Ticat2</string>
    <string name="title_home">Movie</string>
    <string name="title_dashboard">Ticket</string>
    <string name="title_notifications">Account</string>
    <string name="btn_hot">Hot Movie</string>
    <string name="btn_com">Upcoming</string>
    <string name="poster">poster</string>
    <string name="today">Today\n12-17</string>
    <string name="second_day">Friday\n12-18</string>
    <string name="third_day">Saturday\n12-19</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="hot_movies">Hot Movies</string>
    <string name="upcoming">Upcoming</string>
    <string name="movie_info">106 mins | Comedy | Actor names</string>
    <string name="movie_title">Movie Title</string>
    <string name="avator">avator</string>
    <string name="username">Username</string>
    <string name="perchased_tickets">Perchased Tickets</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="account_information">Account Information</string>
    <string name="log_out">Log out</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_nplease_login">Welcome!\nPlease Login</string>
</resources>
