<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="-34dp"
            tools:layout_editor_absoluteX="0dp">


        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline30"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline32"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.55"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline33"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.7"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline24"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.84"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline20"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline22"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4"/>

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avatar"
                android:id="@+id/avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline30"
                app:layout_constraintStart_toStartOf="@+id/guideline21"
                android:contentDescription="@string/avator"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline21"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline31"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6"/>

        <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:textSize="40sp"
                android:textColor="#000000"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline30"
                app:layout_constraintEnd_toStartOf="@+id/guideline31"/>

        <Button
                android:text="@string/perchased_tickets"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/tickets"
                android:textAllCaps="false"
                android:background="@drawable/button_circle_shape"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline22"
                app:layout_constraintTop_toTopOf="@+id/guideline20"/>

        <Button
                android:text="@string/favorite_movies"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/favorite"
                android:textAllCaps="false"
                android:background="@drawable/button_circle_shape"
                android:textSize="20dp"
                app:layout_constraintTop_toTopOf="@+id/guideline22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline32"/>

        <Button
                android:text="@string/account_information"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/account"
                android:textAllCaps="false"
                android:background="@drawable/button_circle_shape"
                android:textSize="20dp"
                app:layout_constraintTop_toTopOf="@+id/guideline32"
                app:layout_constraintBottom_toTopOf="@+id/guideline33"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <Button
                android:text="@string/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:background="@drawable/button_circle_shape"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline24"
                app:layout_constraintTop_toTopOf="@+id/guideline33"
                android:id="@+id/log_out"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>