<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline9"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline10"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"/>

    <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="40dp"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            android:id="@+id/tabLayout1">
    </com.google.android.material.tabs.TabLayout>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:srcCompat="@drawable/greenbook"
            android:id="@+id/poster"
            android:layout_margin="10dp"
            android:contentDescription="@string/poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/left"
            android:id="@+id/left"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/left"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/right"
            android:id="@+id/right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/right"/>

    <androidx.viewpager.widget.ViewPager
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/viewpager1"
            app:layout_constraintBottom_toBottomOf="parent">

    </androidx.viewpager.widget.ViewPager>
</androidx.constraintlayout.widget.ConstraintLayout>